--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tog Multiservices Groupe - Accueil</title>
+    <title>Togo Multiservice Groupe - Accueil</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Variables CSS pour la palette de couleurs */
@@ -143,7 +143,7 @@
         /* Section Hero */
         .hero {
             height: 100vh;
-            background: linear-gradient(rgba(30, 136, 229, 0.8), rgba(100, 181, 246, 0.8)), url('https://images.unsplash.com/photo-1497366754035-f200968a6e72?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
+            background: linear-gradient(rgba(30, 136, 229, 0.5), rgba(100, 181, 246, 0.5)), url('https://images.unsplash.com/photo-1497366754035-f200968a6e72?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -326,7 +326,7 @@
         /* Section CTA */
         .cta {
             padding: 100px 0;
-            background: linear-gradient(rgba(30, 136, 229, 0.9), rgba(100, 181, 246, 0.9)), url('https://images.unsplash.com/photo-1556761175-5973dc0f32e7?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
+            background: linear-gradient(rgba(30, 136, 229, 0.7), rgba(100, 181, 246, 0.7)), url('https://images.unsplash.com/photo-1556761175-5973dc0f32e7?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
             background-size: cover;
             background-position: center;
             color: var(--white);
@@ -533,7 +533,7 @@
         <div class="container header-container">
             <a href="index.html" class="logo">
                 <div class="logo-icon">TMG</div>
-                <div class="logo-text">Tog Multiservices</div>
+                <div class="logo-text">Togo Multiservice Groupe</div>
             </a>
             
             <div class="menu-toggle">
@@ -633,14 +633,14 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text fade-in">
-                    <h2>À Propos de Tog Multiservices Groupe</h2>
-                    <p>Fondé en 2010, Tog Multiservices Groupe est devenu un leader dans le domaine des services multisectoriels. Notre mission est d'offrir des solutions complètes et professionnelles à nos clients, qu'ils soient particuliers ou entreprises.</p>
+                    <h2>À Propos de Togo Multiservice Groupe</h2>
+                    <p>Fondé en 2010, Togo Multiservice Groupe est devenu un leader dans le domaine des services multisectoriels. Notre mission est d'offrir des solutions complètes et professionnelles à nos clients, qu'ils soient particuliers ou entreprises.</p>
                     <p>Avec une équipe d'experts dévoués et des années d'expérience, nous nous engageons à fournir des services de qualité supérieure dans tous nos domaines d'expertise.</p>
                     <p>Notre approche client-centrée et notre souci du détail nous ont permis de bâtir une réputation solide basée sur la confiance et l'excellence.</p>
                     <a href="apropos.html" class="btn">En savoir plus sur nous</a>
                 </div>
                 <div class="about-image fade-in">
-                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80" alt="Équipe Tog Multiservices">
+                    <img src="https://images.unsplash.com/photo-1552664730-d307ca884978?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80" alt="Équipe Togo Multiservice Groupe">
                 </div>
             </div>
         </div>
@@ -660,7 +660,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>Tog Multiservices</h3>
+                    <h3>Togo Multiservice Groupe</h3>
                     <p>Votre partenaire de confiance pour tous vos besoins en services multisectoriels. Qualité, professionnalisme et innovation.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -699,14 +699,14 @@
                     <ul class="footer-links">
                         <li><i class="fas fa-map-marker-alt"></i> 123 Avenue des Services, Lomé, Togo</li>
                         <li><i class="fas fa-phone"></i> +228 12 34 56 78</li>
-                        <li><i class="fas fa-envelope"></i> info@togmultiservices.com</li>
+                        <li><i class="fas fa-envelope"></i> info@togomultiservicegroupe.com</li>
                         <li><i class="fas fa-clock"></i> Lun - Ven: 8h00 - 18h00</li>
                     </ul>
                 </div>
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2023 Tog Multiservices Groupe. Tous droits réservés.</p>
+                <p>&copy; 2023 Togo Multiservice Groupe. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
