--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - Tog Multiservices Groupe</title>
+    <title>Blog - Togo Multiservice Groupe</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Variables CSS pour la palette de couleurs */
@@ -143,7 +143,7 @@
         /* Section Hero Blog */
         .blog-hero {
             height: 50vh;
-            background: linear-gradient(rgba(30, 136, 229, 0.85), rgba(100, 181, 246, 0.85)), url('https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
+            background: linear-gradient(rgba(30, 136, 229, 0.6), rgba(100, 181, 246, 0.6)), url('https://images.unsplash.com/photo-1486312338219-ce68d2c6f44d?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
             background-size: cover;
             background-position: center;
             display: flex;
@@ -608,7 +608,7 @@
         /* Section Newsletter */
         .newsletter {
             padding: 80px 0;
-            background: linear-gradient(rgba(30, 136, 229, 0.9), rgba(100, 181, 246, 0.9)), url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
+            background: linear-gradient(rgba(30, 136, 229, 0.7), rgba(100, 181, 246, 0.7)), url('https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-4.0.3&auto=format&fit=crop&w=1950&q=80');
             background-size: cover;
             background-position: center;
             color: var(--white);
@@ -873,7 +873,7 @@
         <div class="container header-container">
             <a href="index.html" class="logo">
                 <div class="logo-icon">TMG</div>
-                <div class="logo-text">Tog Multiservices</div>
+                <div class="logo-text">Togo Multiservice Groupe</div>
             </a>
             
             <div class="menu-toggle">
@@ -926,7 +926,7 @@
                                     <span><i class="far fa-comment"></i> 12 Commentaires</span>
                                 </div>
                                 <h2 class="article-title"><a href="#">Les Innovations Technologiques en Sécurité Privée en 2023</a></h2>
-                                <p class="article-excerpt">Découvrez comment les nouvelles technologies comme l'IA et l'analyse de données transforment le secteur de la sécurité privée et comment Tog Multiservices intègre ces avancées pour protéger vos biens.</p>
+                                <p class="article-excerpt">Découvrez comment les nouvelles technologies comme l'IA et l'analyse de données transforment le secteur de la sécurité privée et comment Togo Multiservice Groupe intègre ces avancées pour protéger vos biens.</p>
                                 <div class="article-tags">
                                     <span class="tag">Sécurité</span>
                                     <span class="tag">Technologie</span>
@@ -1169,7 +1169,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-column">
-                    <h3>Tog Multiservices</h3>
+                    <h3>Togo Multiservice Groupe</h3>
                     <p>Votre partenaire de confiance pour tous vos besoins en services multisectoriels. Qualité, professionnalisme et innovation.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -1208,14 +1208,14 @@
                     <ul class="footer-links">
                         <li><i class="fas fa-map-marker-alt"></i> 123 Avenue des Services, Lomé, Togo</li>
                         <li><i class="fas fa-phone"></i> +228 12 34 56 78</li>
-                        <li><i class="fas fa-envelope"></i> info@togmultiservices.com</li>
+                        <li><i class="fas fa-envelope"></i> info@togomultiservicegroupe.com</li>
                         <li><i class="fas fa-clock"></i> Lun - Ven: 8h00 - 18h00</li>
                     </ul>
                 </div>
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2023 Tog Multiservices Groupe. Tous droits réservés.</p>
+                <p>&copy; 2023 Togo Multiservice Groupe. Tous droits réservés.</p>
             </div>
         </div>
     </footer>
